--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ Thumbs.db
 
 #environments
 /src/environments/environment.ts
+/src/environments/environment.prod.ts
 
 #practice files
 /src/app/home.component.ts
